<resources>
    <string name="app_name">MR</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="mode_one">Mode One</string>
    <string name="mode_two">Mode Two</string>

    <string name="hello_first_fragment">Master Remote</string>
    <string name="hello_second_fragment">Second fragment</string>
</resources>
